# cardano-db-sync

./: cabal.project  default.nix  stack.yaml
backfill-cbor-datums/: Main.hs  backfill-cbor-datums.cabal
cardano-db/: cardano-db.cabal
cardano-db-sync/: Setup.hs  cardano-db-sync.cabal
cardano-db-sync-extended/: cardano-db-sync-extended.cabal
cardano-db-sync/src/Cardano/: DbSync.hs
cardano-db-sync/src/Cardano/DbSync/Era/Byron/: Genesis.hs  Insert.hs
cardano-db-sync/src/Cardano/DbSync/Era/Shelley/: Genesis.hs  Insert.hs  Query.hs  Validate.hs  ValidateWithdrawal.hs
cardano-db-sync/src/Cardano/DbSync/Era/Shelley/Generic/: Tx.hs
cardano-db/src/Cardano/Db/: Insert.hs  Migration.hs  Schema.hs  Types.hs
cardano-db/src/Cardano/Db/Schema/: Orphans.hs
cardano-db/test/Test/IO/Cardano/Db/: Migration.hs  Rollback.hs  TotalSupply.hs  Util.hs
doc/: interesting-queries.md
nix/: pkgs.nix
nix/nixos/: cardano-db-sync-service.nix
schema/: migration-2-0006-20220509.sql  migration-2-0012-20210723.sql  migration-2-0012-20210801.sql  migration-2-0013-20210801.sql  migration-2-0013-20210802.sql
scripts/: postgresql-setup.sh
