cabal-version:       2.2
name:                backfill-cbor-datums
version:             0.1.0.0
license:             Apache-2.0
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2022 Richard Marko
build-type:          Simple

executable backfill-cbor-datums
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , cardano-binary
                     , cardano-db
                     , cardano-api
                     , esqueleto
                     , plutus-ledger-api
                     , serialise
                     , text
                     , unordered-containers
                     , vector
                     , base16-bytestring
                     , scientific
  default-language:    Haskell2010


-- test-suite backfill-cbor-datums-tests
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       --ParseSpec
--                        SpecHelper
--   build-depends:       base >= 4.7 && < 5
--                      , backfill-cbor-datums
--                      , hspec
--                      , base16-bytestring
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/backfill-cbor-datums
